--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ function atualizar() {
     document.getElementById("vagasRest").innerText = "Vagas restantes: " + restantes;
 
     // PIX
-    document.getElementById("pixbtn").href = "javascript:copiarPix('trilheiros.roomt')";
+    document.getElementById("pixbtn").href = "javascript:copiarPix('trilheiros.roomt@gmail.com')";
 
     // Cartão
     document.getElementById("cardbtn").href = "https://link.mercadopago.com.br/trilheirosderoo";
@@ -343,3 +343,4 @@ function fecharConfirm(){
 </script>
 </body>
 </html>
+
