--- a/index.html
+++ b/index.html
@@ -7,217 +7,238 @@
 
 <style>
 body {
-    background: #111;
-    color: #fff;
-    font-family: Arial, sans-serif;
-    padding: 0;
-    margin: 0;
+    background: #111; color: #fff; font-family: Arial, sans-serif;
+    padding: 0; margin: 0;
 }
 .container {
-    width: 100%;
-    max-width: 500px;
-    margin: auto;
-    padding: 15px;
+    width: 100%; max-width: 500px; margin: auto; padding: 15px;
 }
 .logo {
-    display: block;
-    width: 150px;
-    margin: 15px auto;
-    border-radius: 12px;
-    box-shadow: 0 6px 15px rgba(0,0,0,0.6);
+    display: block; width: 150px; margin: 15px auto;
+    border-radius: 12px; box-shadow: 0 6px 15px rgba(0,0,0,0.6);
 }
 .card {
-    background: #1c1c1c;
-    padding: 20px;
-    border-radius: 15px;
-    margin-bottom: 25px;
-    box-shadow: 0 6px 18px rgba(0,0,0,0.6);
+    background: #1c1c1c; padding: 20px; border-radius: 15px;
+    margin-bottom: 25px; box-shadow: 0 6px 18px rgba(0,0,0,0.6);
 }
 .card img {
-    width: 100%;
-    border-radius: 12px;
-    margin-bottom: 12px;
+    width: 100%; border-radius: 12px; margin-bottom: 12px;
 }
-.descricao { font-size: 16px; color: #ccc; margin-bottom: 8px; }
-.legenda { font-size: 14px; color: #aaa; margin-bottom: 12px; }
+.descricao {
+    font-size: 16px; color: #ccc; margin-bottom: 8px;
+}
 h2 { margin-top: 0; font-size: 22px; }
 label { display: block; margin-top: 12px; font-size: 18px; }
 input, select {
-    width: 100%;
-    padding: 14px;
-    font-size: 18px;
-    border-radius: 8px;
-    border: none;
-    margin-top: 5px;
-    background: #2a2a2a;
-    color: #fff;
+    width: 100%; padding: 14px; font-size: 18px;
+    border-radius: 8px; border: none; margin-top: 5px;
+    background: #2a2a2a; color: #fff;
 }
 
-.total, .vagas-restantes, .mensagem {
-    font-size: 22px;
-    margin-top: 10px;
-    font-weight: bold;
-    text-align: center;
-}
-
-/* Botões */
 a.btn{
-  display:block;
-  text-decoration:none;
-  text-align:center;
-  padding:16px;
-  border-radius:14px;
-  margin-top:16px;
-  font-size:18px;
-  font-weight:bold;
-  cursor:pointer;
-  box-shadow:0 6px 0 rgba(0,0,0,0.4),0 8px 18px rgba(0,0,0,0.6);
-  transition:0.2s;
+    display:block; text-decoration:none; text-align:center;
+    padding:16px; border-radius:14px; margin-top:16px;
+    font-size:18px; font-weight:bold; cursor:pointer;
+    box-shadow:0 6px 0 rgba(0,0,0,0.4),0 8px 18px rgba(0,0,0,0.6);
+    transition:0.2s;
 }
 a.btn:active{
-  transform:translateY(3px);
-  box-shadow:0 3px 0 rgba(0,0,0,0.4);
+    transform:translateY(3px);
+    box-shadow:0 3px 0 rgba(0,0,0,0.4);
 }
-a.pixbtn{background:#00c853;color:black;}
-a.creditobtn{background:#1976d2;color:white;}
-a.wabtn{background:#25d366;color:black;}
 
+a.pixbtn { background:#00c853; color:black; }
+a.creditobtn { background:#1976d2; color:white; }
+a.wabtn { background:#25d366; color:black; }
+
+.total, .mensagem {
+    font-size: 22px; margin-top: 10px;
+    font-weight: bold; text-align: center;
+}
+.mensagem { font-size: 16px; color: #ff5252; }
+
+@media(max-width:600px){
+    .container{padding:10px;}
+    .logo{width:120px;}
+    h2{font-size:20px;}
+    .card{padding:16px;}
+    input,select{font-size:16px;padding:12px;}
+    a.btn{font-size:16px;padding:14px;}
+    .total{font-size:20px;}
+    .descricao{font-size:15px;}
+}
 </style>
 
 <script>
 let PRECOS = { adulto: 332, crianca: 282 };
 let vagasTotais = 28;
 let vagasReservadas = 0;
+
 let qtdAdulto = 1;
 let qtdCrianca = 0;
 
-function selecionarAdulto(){ qtdAdulto = Number(document.getElementById('adultoSelect').value); atualizar(); }
-function selecionarCrianca(){ qtdCrianca = Number(document.getElementById('criancaSelect').value); atualizar(); }
+function selecionarAdulto(){
+    qtdAdulto = Number(document.getElementById('adultoSelect').value);
+    atualizar();
+}
+
+function selecionarCrianca(){
+    qtdCrianca = Number(document.getElementById('criancaSelect').value);
+    atualizar();
+}
 
 function mostrarPagamento(){
-  let tipo = document.getElementById("selectPagamento").value;
-  let pix = document.getElementById("pixbtn");
-  let card = document.getElementById("cardbtn");
+    let tipo = document.getElementById("selectPagamento").value;
+    let pix = document.getElementById("pixbtn");
+    let card = document.getElementById("cardbtn");
 
-  if(tipo === "PIX"){
-    pix.style.display = "block";
-    card.style.display = "none";
-  } else if(tipo === "CREDITO"){
-    pix.style.display = "none";
-    card.style.display = "block";
-  } else {
     pix.style.display = "none";
     card.style.display = "none";
-  }
+
+    if(tipo === "PIX") pix.style.display = "block";
+    if(tipo === "CREDITO") card.style.display = "block";
 }
 
 function atualizar(){
-  let total = (qtdAdulto * PRECOS.adulto) + (qtdCrianca * PRECOS.crianca);
-  let totalVagas = qtdAdulto + qtdCrianca;
-  let restantes = vagasTotais - vagasReservadas - totalVagas;
+    let total = (qtdAdulto * PRECOS.adulto) + (qtdCrianca * PRECOS.crianca);
 
-  if(restantes < 0){
-    document.getElementById("mensagem").innerText = "Vagas esgotadas para este número de reservas";
-    document.getElementById("total").innerText = "Total indisponível";
-    document.getElementById("pixbtn").style.display = "none";
-    document.getElementById("cardbtn").style.display = "none";
-    return;
-  }
+    document.getElementById("mensagem").innerText = "";
+    document.getElementById("total").innerText = "Total R$ " + total;
 
-  document.getElementById("mensagem").innerText = "";
-  document.getElementById("total").innerText = "Total R$ " + total;
-  document.getElementById("vagasRest").innerText = "Vagas restantes: " + restantes;
+    document.getElementById("pixbtn").href = "javascript:copiarPix('trilheiros.roomt@gmail.com')";
+    document.getElementById("cardbtn").href = "https://link.mercadopago.com.br/trilheirosderoo";
 }
 
-function copiarPix(chave){ navigator.clipboard.writeText(chave); alert("Chave PIX copiada: " + chave); }
+function copiarPix(chave){
+    navigator.clipboard.writeText(chave);
+    alert("Chave PIX copiada: " + chave);
+}
 
 function enviarWhatsApp(){
-  let nome = document.getElementById("nome").value;
-  if(!nome){ alert("Digite seu nome completo!"); return; }
+    let nome = document.getElementById("nome").value;
+    if (!nome){ alert("Digite seu nome completo!"); return; }
 
-  let total = (qtdAdulto * PRECOS.adulto) + (qtdCrianca * PRECOS.crianca);
-  let totalVagas = qtdAdulto + qtdCrianca;
+    let total = (qtdAdulto * PRECOS.adulto) + (qtdCrianca * PRECOS.crianca);
+    let totalVagas = qtdAdulto + qtdCrianca;
 
-  let msg = `Olá! Seguem os dados da minha reserva para a Lagoa Azul:
-
+    let msg = `Olá! Seguem os dados da minha reserva para a Lagoa Azul:
 👤 *Nome(s): ${nome}*
 🎟️ Vagas: ${totalVagas}
 💰 Valor total: R$ ${total}
-📎 Segue o comprovante.`;
+📎 Segue o comprovante em anexo.`;
 
-  window.open("https://wa.me/5566996926174?text=" + encodeURIComponent(msg), "_blank");
+    window.open("https://wa.me/5566996926174?text=" + encodeURIComponent(msg), "_blank");
 }
 </script>
 
-<!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js"></script>
+
 <script>
 const firebaseConfig = {
-  apiKey: "AIzaSyDe3q92CKXOJUJ7vj2xmYlqKvlFirG4FMc",
-  authDomain: "reserva-lagoa-azul.firebaseapp.com",
-  databaseURL: "https://reserva-lagoa-azul-default-rtdb.firebaseio.com/",
-  projectId: "reserva-lagoa-azul",
-  storageBucket: "reserva-lagoa-azul.firebasestorage.app",
-  messagingSenderId: "681171703490",
-  appId: "1:681171703490:web:73fd26225e944966620d5b",
-  measurementId: "G-ZSDR07N74G"
+    apiKey: "AIzaSyDe3q92CKXOJUJ7vj2xmYlqKvlFirG4FMc",
+    authDomain: "reserva-lagoa-azul.firebaseapp.com",
+    databaseURL: "https://reserva-lagoa-azul-default-rtdb.firebaseio.com/",
+    projectId: "reserva-lagoa-azul",
+    storageBucket: "reserva-lagoa-azul.firebasestorage.app",
+    messagingSenderId: "681171703490",
+    appId: "1:681171703490:web:73fd26225e944966620d5b",
+    measurementId: "G-ZSDR07N74G"
 };
+
 firebase.initializeApp(firebaseConfig);
 const db = firebase.database();
 
 function atualizarContadorRealtime(){
-  db.ref("reservas").on("value", snap => {
-    let dados = snap.val();
-    let total = 0;
+    db.ref("reservas").on("value", snap => {
+        let dados = snap.val();
+        let total = 0;
 
-    if(dados){
-      Object.values(dados).forEach(r => {
-        if(r.vagas) total += Number(r.vagas);
-      });
-    }
+        if(dados){
+            Object.values(dados).forEach(r => {
+                if(r.vagas) total += Number(r.vagas);
+            });
+        }
 
-    vagasReservadas = total;
-    atualizar();
-  });
+        vagasReservadas = total;
+        atualizar();
+    });
 }
 
 function registrarReserva(totalVagas, nome, totalValor, pagamento){
-  let id = Date.now();
-  db.ref("reservas/" + id).set({
-    nome: nome,
-    vagas: totalVagas,
-    total: totalValor,
-    pagamento: pagamento,
-    horario: new Date().toLocaleString("pt-BR")
-  });
+    let id = Date.now();
+    db.ref("reservas/" + id).set({
+        nome: nome,
+        vagas: totalVagas,
+        total: totalValor,
+        pagamento: pagamento,
+        horario: new Date().toLocaleString("pt-BR")
+    });
 }
 </script>
 </head>
-<body onload="atualizarContadorRealtime(); atualizar();">
+
+<body onload="atualizarContadorRealtime()">
 
 <div class="container">
+
 <img src="https://i.imgur.com/MwHr761.png" class="logo">
 
 <div class="card">
+
 <img src="https://i.imgur.com/aZCi6df.jpeg">
+
+<div class="descricao">
+A magia da Lagoa Azul te espera no dia 21 de dezembro! Um dos cenários mais lindos de Mato Grosso.
+</div>
 
 <h2>Lagoa Azul – Primavera do Leste</h2>
 <p>Data: 21 de dezembro</p>
 
 <label>Nome para reserva</label>
-<input id="nome" placeholder="Digite todos os nomes da reserva">
+<input id="nome" placeholder="Digite todos os nomes da reserva" style="height:48px;">
 
 <label>Adultos</label>
 <select id="adultoSelect" onchange="selecionarAdulto()">
-  <option value="1">1 vaga</option>
-  <option value="2">2 vagas</option>
-  <option value="3">3 vagas</option>
-  <option value="4">4 vagas</option>
-  <option value="5">5 vagas</option>
+    <option value="1">1 vaga</option>
+    <option value="2">2 vagas</option>
+    <option value="3">3 vagas</option>
+    <option value="4">4 vagas</option>
+    <option value="5">5 vagas</option>
 </select>
 
 <label>Crianças até 10 anos</label>
 <select id="criancaSelect" onchange="selecionarCrianca()">
-  <option value="0">0 vaga
+    <option value="0">0 vaga</option>
+    <option value="1">1 vaga</option>
+    <option value="2">2 vagas</option>
+    <option value="3">3 vagas</option>
+    <option value="4">4 vagas</option>
+    <option value="5">5 vagas</option>
+</select>
 
+<p id="total" class="total">Total R$ 332</p>
+<p id="mensagem" class="mensagem"></p>
+
+<div id="formasPagamento" style="margin-top:20px; text-align:center;">
+    <label style="font-size:20px; font-weight:bold;">Qual forma de pagamento?</label>
+
+    <select id="selectPagamento" onchange="mostrarPagamento()"
+        style="width:100%;padding:14px;font-size:18px;border-radius:8px;border:none;background:#2a2a2a;color:#fff;margin-top:10px;">
+        <option value="">Selecione...</option>
+        <option value="PIX">🔥 PIX (recomendado)</option>
+        <option value="CREDITO">💳 Cartão de Crédito</option>
+    </select>
+</div>
+
+<a id="pixbtn" class="btn pixbtn" style="display:none;">⚡ Copiar chave PIX</a>
+<a id="cardbtn" class="btn creditobtn" target="_blank" style="display:none;">💳 Pagar no cartão</a>
+
+<a class="btn wabtn" href="javascript:enviarWhatsApp()">Após pagamento, enviar comprovante</a>
+
+</div>
+
+</div>
+
+</body>
+</html>
